# vecmath

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: circle3pts.h  matops.h  vecfuncs.h  vecmath.h  vecops.h  vecprint.h
scratch/: test_sse.cpp  vecsse.cpp  vecsse.h
tests/: Timer.h  test_circle.cpp  test_circled.cpp  test_common.h  test_ctor.cpp  test_dotcross.cpp  test_funcs.cpp  test_mats.cpp  test_timed.cpp
